fix(px-view-header): corrigir problemas z-index

--- a/src/system/components/px-view-header/px-view-header.css
+++ b/src/system/components/px-view-header/px-view-header.css
@@ -1,3 +1,6 @@
 div.px-view-header {
 	margin-left: -10px;
 }
+div.px-header {
+	z-index: 100;
+}
